change homepage.html to index.html

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
     <body id="blog-grid-container">
         <ul class="menubar">
             <li class="menu-buttons"><a href="#about">About</a></li>
-            <li class="menu-buttons"><a href="homepage.html">Home</a></li>
+            <li class="menu-buttons"><a href="index.html">Home</a></li>
         </ul>
 
         <div class="blog-intro">
