--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <ul class="menubar">
             <li class="menu-buttons"><a href="#about">About</a></li>
-            <li class="menu-buttons"><a href="homepage.html">Home</a></li>
+            <li class="menu-buttons"><a href="index.html">Home</a></li>
         </ul>
 
 
