reoreganise media queries to the bottom

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <title>My Blog</title>
-        <link rel="stylesheet" href="css/homepage-style.css">
+        <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent+Marker">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     </head>
