removed about button

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
 
     <body id="blog-grid-container">
         <ul class="menubar">
-            <li class="menu-buttons"><a href="#about">About</a></li>
+            <!-- <li class="menu-buttons"><a href="#about">About</a></li> -->
             <li class="menu-buttons"><a href="index.html">Home</a></li>
         </ul>
 
