--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body id="home-grid-container">
 
         <ul class="menubar">
-            <li class="menu-buttons"><a href="#about">About</a></li>
+            <!-- <li class="menu-buttons"><a href="#about">About</a></li> -->
             <li class="menu-buttons"><a href="index.html">Home</a></li>
         </ul>
 
